feat: fixes and updates

--- a/src/app/components/work-order-timeline/work-order-timeline.html
+++ b/src/app/components/work-order-timeline/work-order-timeline.html
@@ -10,7 +10,7 @@
         <div class="timescale-control">
           <!-- ng-select for timescale -->
           <ng-select class="timescale-select" [items]="timeScaleOptions" [clearable]="false" [searchable]="false"
-            [ngModel]="timeScale()" (ngModelChange)="onTimeScaleChange($event)" [title]="'Select timescale'">
+            [ngModel]="timeScale" (ngModelChange)="onTimeScaleChange($event)" [title]="'Select timescale'">
 
             <ng-template ng-label-tmp let-item="item">
               <span class="timescale-label">Timescale</span>
@@ -31,11 +31,11 @@
 
             <ng-template ng-label-tmp let-item="item">
               <span class="timescale-label">Status</span>
-              <span class="timescale-value" style="text-transform: capitalize;">{{ item }}</span>
+              <span class="timescale-value">{{ item | uppercase }}</span>
             </ng-template>
 
             <ng-template ng-option-tmp let-item="item">
-              <span class="timescale-option" style="text-transform: capitalize;">{{ item }}</span>
+              <span class="timescale-option">{{ item | uppercase }}</span>
             </ng-template>
           </ng-select>
         </div>
@@ -52,7 +52,7 @@
     <!-- Left panel: Work Centers -->
     <div class="left-panel">
       <div class="left-header">Work Center</div>
-      @for (wc of workCenters(); track wc.docId) {
+      @for (wc of store.workCenters(); track wc.docId) {
       <div class="left-row" [class.even]="$even">
         {{ wc.data.name }}
       </div>
@@ -62,23 +62,22 @@
     <!-- Right panel: Timeline area -->
     <div class="right-panel" #timelineArea>
       <!-- Column headers -->
-      <div class="column-headers" [style.min-width.px]="columns().length * columnMinWidth()">
-        @for (col of columns(); track col.date) {
+      <div class="column-headers" [style.min-width.px]="columns.length * columnMinWidth">
+        @for (col of columns; track col.date) {
         <div class="col-header" [class.current-period]="col.isCurrent" [style.left.%]="col.left"
-          [style.width.%]="col.width" (click)="onHeaderClick($event, col.date)" style="cursor: pointer;"
-          title="Click to move cursor">
+          [style.width.%]="col.width">
           <span class="col-label">{{ col.label }}</span>
         </div>
         }
       </div>
 
       <!-- Timeline rows -->
-      @for (wc of workCenters(); track wc.docId) {
-      <div class="timeline-row" [class.even]="$even" [style.min-width.px]="columns().length * columnMinWidth()"
+      @for (wc of store.workCenters(); track wc.docId) {
+      <div class="timeline-row" [class.even]="$even" [style.min-width.px]="columns.length * columnMinWidth"
         (mousedown)="onTimelineMouseDown($event, wc.docId)" (mouseup)="onTimelineMouseUp($event, wc.docId)"
         (mousemove)="onTimelineMouseMove($event)" (mouseleave)="onTimelineMouseLeave()">
         <!-- Grid columns -->
-        @for (col of columns(); track col.date) {
+        @for (col of columns; track col.date) {
         <div class="grid-cell" [class.current-period]="col.isCurrent" [style.left.%]="col.left"
           [style.width.%]="col.width"></div>
         }
@@ -107,7 +106,7 @@
         </div>
 
         <!-- Ellipsis dropdown menu -->
-        @if (activeMenu()?.orderId === order.docId) {
+        @if (activeMenu?.orderId === order.docId) {
         <div class="ellipsis-dropdown" [style.left.%]="getBarLeft(order) + getBarWidth(order)" [style.top.px]="10"
           (mousedown)="$event.stopPropagation()">
           <button class="dropdown-item" (click)="onMenuEdit(order)">Edit</button>
@@ -117,33 +116,22 @@
         }
       </div>
       }
-
-      <!-- Cursor / Slider line -->
-      @if (cursorPositionPercent() >= 0 && cursorPositionPercent() <= 100) { <div class="cursor-line"
-        [style.left.%]="cursorPositionPercent()" (mousedown)="onCursorMouseDown($event)">
-        <div class="cursor-handle">
-          <svg width="10" height="14" viewBox="0 0 10 14">
-            <path d="M0 0 L10 0 L10 10 L5 14 L0 10 Z" fill="#5046e5" />
-          </svg>
-        </div>
     </div>
-    }
   </div>
-</div>
 
-<!-- Tooltip -->
-@if (tooltip().visible) {
-<div class="tooltip-popup" [style.top.px]="tooltip().y - 40" [style.left.px]="tooltip().x">
-  {{ tooltip().text }}
-</div>
-}
+  <!-- Tooltip -->
+  @if (tooltip.visible) {
+  <div class="tooltip-popup" [style.top.px]="tooltip.y - 40" [style.left.px]="tooltip.x">
+    {{ tooltip.text }}
+  </div>
+  }
 </div>
 
 <!-- Slide-out panel -->
 
 
 <!-- Confirm Delete Dialog -->
-<app-confirm-dialog [visible]="confirmVisible()" [title]="'Delete Work Order'"
+<app-confirm-dialog [visible]="confirmVisible" [title]="'Delete Work Order'"
   [message]="'Are you sure you want to delete this work order? This action cannot be undone.'" [confirmLabel]="'Delete'"
   [cancelLabel]="'Cancel'" [destructive]="true" (confirm)="onConfirmDelete()" (cancel)="onCancelDelete()">
 </app-confirm-dialog>
